--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -254,7 +254,7 @@
                     break;
                 }
             }
-            if ($oversied) {
+            if ($oversized) {
                 alert("No one file can exceed 32MB.");
                 $dropbox.classList.remove("highlight");
                 return;
