--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -231,7 +231,7 @@
                 alert("Error! Upload failed. Can not connect to server.");
             };
 
-            $xhr.send(file);
+            $xhr.send($file);
         }
 
         function shortenFileName($fileName) {
