--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -106,6 +106,7 @@
             right: 0;
             border: 1px solid #f00;
             border-radius: 6px;
+            color: #777;
         }
 
         .delete-button:hover {
