--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -104,8 +104,8 @@
             position: absolute;
             top: 0;
             right: 0;
-            border: 1px solid #f00;
-            border-radius: 6px;
+            border: 1px solid #777;
+            border-radius: 50%;
             color: #777;
         }
 
