--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -102,8 +102,8 @@
             width: 16px;
             height: 16px;
             position: absolute;
-            top: 2;
-            right: 2;
+            top: 2px;
+            right: 2px;
             border: 1px solid #777;
             border-radius: 50%;
             color: #777;
