--- a/views/new-idea/upload_test.html
+++ b/views/new-idea/upload_test.html
@@ -110,14 +110,15 @@
         }
 
         .delete-button:hover {
-            background-color: #f00;
+            border: 1px solid #f00;
         }
 
         .delete-button:focus {
-            outline: none;
+            border: 1px solid #f00;
         }
 
         .delete-button:active {
+            border: 1px solid #f00;
             background-color: #f00;
         }
     </style>
